completed allure reporting